# 365-mini-projects

./: README.md
projects/2026-05-28-json-pretty-cli/: README.md  json_pretty.js  json_pretty.mjs  sample-input.json  sample-output.json
projects/2026-05-28-seconds-to-human/: README.md  seconds_to_human.sh
projects/2026-05-28-text-stats/: README.md  sample.txt  text_stats.py
projects/2026-05-29-ci-log-triage-assistant/: README.md  triage_ci_log.py
projects/2026-05-29-dockerfile-risk-checker/: README.md  dockerfile_risk_checker.py  sample.Dockerfile
projects/2026-05-30-llm-json-guard/: README.md  llm_json_guard.py  sample_invalid.json  sample_schema.json  sample_valid.json
projects/2026-05-31-k8s-manifest-sanity-check/: README.md  k8s_manifest_sanity_check.py  sample-risky-deployment.yaml
projects/2026-06-01-ci-failure-first-aid/: README.md  ci_failure_first_aid.py  sample_ci_log.txt
projects/2026-06-02-prompt-regression-check/: README.md  prompt_regression_check.py  sample_cases_fail.json  sample_cases_pass.json
projects/2026-06-03-terraform-output-guard/: README.md  sample_outputs.tf  sample_outputs_fixed.tf  terraform_output_guard.py
projects/2026-06-04-github-action-pin-check/: README.md  (+3 more)
projects/2026-06-10-incident-log-summarizer/: Dockerfile  POST_CAPTION.md  README.md  pyproject.toml
projects/2026-06-10-incident-log-summarizer/.github/workflows/: ci.yml
projects/2026-06-10-incident-log-summarizer/src/incident_log_summarizer/: __init__.py  analyzer.py  cli.py
projects/2026-06-10-incident-log-summarizer/tests/: test_analyzer.py
(+234 files in other folders)
