[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "incident-log-summarizer"
version = "0.1.0"
description = "CLI assistant that summarizes incident logs into severity, evidence, probable cause, and runbook actions."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Nagadeepak Appalaneni" }]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
incident-log-summarizer = "incident_log_summarizer.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
